Fix to setup.py. Fix to refs.

--- a/guide/guide.tex
+++ b/guide/guide.tex
@@ -1,7 +1,7 @@
 \documentclass[aps,prl,twocolumn,nofootinbib]{revtex4-1}
 \usepackage{graphics,color,graphicx,amsmath}
 \usepackage{xr,natbib}
-\bibliographystyle{vancouver}
+\bibliographystyle{nature}
 \usepackage{amsbsy}
 
 \newcommand{\norm}[1]{\left\Vert#1\right\Vert}
@@ -11,7 +11,7 @@
 \newcommand{\eps}{\varepsilon}
 \newcommand{\To}{\longrightarrow}
 \newcommand{\BX}{\mathbf{B}(X)}
-\bibliographystyle{unsrt}
+\bibliographystyle{abbrvnat}
 \graphicspath{{images}}
 
 \begin{document}
