--- a/guide/refs.bib
+++ b/guide/refs.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Tue, 23 Jan 2018.
+%% Created using Papers on Wed, 24 Jan 2018.
 %% http://papersapp.com/papers/
 
 @article{Shannon:1948wk,
@@ -42,7 +42,7 @@ pages = {4786--4791}
 @article{Monasson:2011fo,
 author = {Cocco, S and Monasson, R},
 title = {{Adaptive Cluster Expansion for Inferring Boltzmann Machines with Noisy Data}},
-journal = {Physical Review Letters},
+journal = {Phys Rev Lett},
 year = {2011},
 volume = {106},
 number = {9},
@@ -88,7 +88,7 @@ month = feb
 @article{Stephens:2010hi,
 author = {Stephens, Greg J and Bialek, William},
 title = {{Statistical mechanics of letters in words}},
-journal = {Phys. Rev. E},
+journal = {Phys Rev E},
 year = {2010},
 volume = {81},
 number = {6},
@@ -99,7 +99,7 @@ month = jun
 @inproceedings{Weigt:2009ba,
 author = {Weigt, M and White, R A and Szurmant, H},
 title = {{Identification of direct residue contacts in protein{\textendash}protein interaction by message passing}},
-booktitle = {Proceedings of the {\ldots}},
+booktitle = {PNAS},
 year = {2009}
 }
 
@@ -124,7 +124,7 @@ month = feb
 @article{Castellano:2009ce,
 author = {Castellano, Claudio and Fortunato, Santo and Loreto, Vittorio},
 title = {{Statistical physics of social dynamics}},
-journal = {Rev. Mod. Phys.},
+journal = {Rev Mod Phys},
 year = {2009},
 volume = {81},
 number = {2},
@@ -135,7 +135,7 @@ month = may
 @article{Shemesh:2013dd,
 author = {Shemesh, Yair and Sztainberg, Yehezkel and Forkosh, Oren and Shlapobersky, Tamar and Chen, Alon and Schneidman, Elad},
 title = {{High-order social interactions in groups of mice}},
-journal = {eLife Sciences},
+journal = {eLife},
 year = {2013},
 volume = {2},
 pages = {e00759},
@@ -195,7 +195,7 @@ year = {2012}
 @inproceedings{Lezon:2006ws,
 author = {Lezon, T R and Banavar, J R and Cieplak, M},
 title = {{Using the principle of entropy maximization to infer genetic interaction networks from gene expression patterns}},
-booktitle = {Proceedings of the {\ldots}},
+booktitle = {PNAS},
 year = {2006}
 }
 
@@ -260,7 +260,7 @@ edition = {2nd}
 @article{Hyvarinen:2007ed,
 author = {Hyv{\"a}rinen, Aapo},
 title = {{Some extensions of score matching}},
-journal = {Computational Statistics {\&} Data Analysis},
+journal = {Comput Stat Data Anal},
 year = {2007},
 volume = {51},
 number = {5},
@@ -271,7 +271,7 @@ month = feb
 @article{Jaynes:1957fy,
 author = {Jaynes, E T},
 title = {{Information Theory and Statistical Mechanics}},
-journal = {Phys. Rev.},
+journal = {Phys Rev},
 year = {1957},
 volume = {106},
 number = {4},
@@ -290,7 +290,7 @@ month = nov
 @article{SohlDickstein:2011im,
 author = {Sohl-Dickstein, Jascha and Battaglino, Peter B and DeWeese, Michael R},
 title = {{New Method for Parameter Estimation in Probabilistic Models: Minimum Probability Flow}},
-journal = {Physical Review Letters},
+journal = {Phys Rev Lett},
 year = {2011},
 volume = {107},
 number = {22},
@@ -301,7 +301,7 @@ month = nov
 @article{Aurell:2012hi,
 author = {Aurell, Erik and Ekeberg, Magnus},
 title = {{Inverse Ising Inference Using All the Data}},
-journal = {Physical Review Letters},
+journal = {Phys Rev Lett},
 year = {2012},
 volume = {108},
 number = {9},
@@ -314,21 +314,15 @@ Exact in the limit of infinite data if we assume the stationary point is unique 
 
 @article{BarCoc13,
 Author = {Barton, John and Cocco, Simona},
-Date-Added = {2018-01-02 22:27:21 +0000},
-Date-Modified = {2018-01-02 22:27:26 +0000},
 Doi = {10.1088/1742-5468/2013/03/P03002},
 Issn = {1742-5468},
-Journal = {Journal of Statistical Mechanics: Theory and Experiment},
-Mendeley-Groups = {Ising models},
-Month = {mar},
+Journal = {{J Stat Mech Theory Exp}},
+Month = {March},
 Number = {03},
 Pages = {P03002},
 Title = {{Ising models for neural activity inferred via selective cluster expansion: structural and coding properties}},
-Url = {http://stacks.iop.org/1742-5468/2013/i=03/a=P03002?key=crossref.b793af40de7f98b1085b367fa334bbf4},
 Volume = {2013},
-Year = {2013},
-Bdsk-Url-1 = {http://stacks.iop.org/1742-5468/2013/i=03/a=P03002?key=crossref.b793af40de7f98b1085b367fa334bbf4},
-Bdsk-Url-2 = {https://dx.doi.org/10.1088/1742-5468/2013/03/P03002}}
+Year = {2013}}
 
 @article{CocMon12,
 Archiveprefix = {arXiv},
@@ -337,7 +331,6 @@ Author = {Cocco, S and Monasson, R},
 Date-Added = {2018-01-02 22:26:53 +0000},
 Date-Modified = {2018-01-02 22:31:14 +0000},
 Eprint = {arXiv:1110.5416v1},
-File = {:Users/bdaniels/Library/Application Support/Mendeley Desktop/Downloaded/Cocco, Monasson - 2012 - Adaptive cluster expansion for the inverse Ising problem convergence, algorithm and tests.pdf:pdf},
 Journal = {Journal of Statistical Physics},
 Pages = {1--57},
 Title = {{Adaptive cluster expansion for the inverse Ising problem: convergence, algorithm and tests}},
