--- a/guide/guide.tex
+++ b/guide/guide.tex
@@ -111,7 +111,7 @@ Finding the parameters $\lambda_{\rm k}$ that match the constraints $\br{f_{\rm 
 The Ising model is a statistical physics model of magnetism \cite{Ising:1924vf}. It consists of a set of spins $\rs_{\rm i}$ with 2 possible orientations (up and down), each coupled to an external magnetic field $h_{\rm i}$ and coupled to each other with couplings $J_{\rm ij}$. The strength of the magnetic field determines the tendency of each of the spins to orient in a particular direction and the couplings determine whether the spins tend to point together ($J_{\rm ij}>0$) or against each other ($J_{\rm ij}<0$). Typically, neighbors are defined as spins that interact with one another given by some underlying network structure. Figure \ref{gr:ising} shows a fully-connected example.
 
 \begin{figure}[tbp]\centering
-	\includegraphics[width=.85\linewidth,clip,trim={100 70 70 60}]{../images/ising_example}
+	\includegraphics[width=.85\linewidth,clip,trim={100 70 70 60}]{ising_example.pdf}
 \caption{Example of a fully connected Ising model with random couplings. Each spin $\rs_{\rm i}$ (circle) can take one of two states (black or white, corresponding to $-1$ and $+1$) and is connected to every other spin in the system with a positive or negative coupling.  This schematic represents one possible state of the spins.  The inverse Ising problem starts with statistics about the states observed in the system and infers the coupling strengths $J_{\rm ij}$ and individual biases $h_{\rm i}$ that reproduce such statistics. }
 \label{gr:ising}
 \end{figure}
