--- a/ipynb/usage_guide.ipynb
+++ b/ipynb/usage_guide.ipynb
@@ -16,11 +16,8 @@
     "## Quick guide\n",
     "Each algorithm for solving the inverse Ising problem is a class. To use an algorithm, an instance of the class must be declared and the `solve()` method called. For some of the methods, you will also need to declare some helper functions that the algorithm needs. For the general case of the pairwise maxent model, these helper functions are already part of the package, and you should be able to import them.<br><br>\n",
     "Most of the classes require the user to specify the maxent problem by defining `calc_observables()`. Here, \"observables\" refers to the constraints that are imposed in the model and these must be calculated from some sample of states. The term \"multipliers\" refers to Langrangian multipliers (or parameters) that are found such that the constraints are met.<br><br>\n",
-    "This notebook is structured such that it starts with setting up a simple $n=5$ model to solve. In this case, there are 15 parameters to find. Five parameters are the mean fields $h_{\\rm i}$ corresponding to the magnetization of the spins and ten parameters are for the pairwise correlations.<br><br>\n",
-    "The following sections are examples using each of the algorithms.\n",
-    "<br><br>\n",
-    "## Troubleshooting\n",
-    "Some users may encounter difficulties with the multiprocess module in which case the n_jobs kwarg should be set to 0 when the Solver instance is declared."
+    "This notebook is structured such that it starts with setting up a simple $n=5$ model to solve. In this case, there are 15 parameters to find. Five parameters are the mean fields $h_{\\rm i}$ corresponding to the magnetization of the spins and ten parameters are for the pairwise couplings $J_{\\rm ij}$ corresponding to the pairwise correlations.<br><br>\n",
+    "The following sections are examples using each of the algorithms."
    ]
   },
   {
@@ -100,18 +97,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Enumeration example using Exact.\n",
+    "# Enumeration example.\n",
     "\n",
     "The exact module implements the most direct approach to solving the inverse Ising problem by writing out all the constraint equations. This involves enumerating all the terms in the partition function $Z$. Then, we find the solution using `scipy.optimize.minimize`.\n",
     "<br><br><br>\n",
-    "Using the `Exact` class consists of a few steps.\n",
+    "Using the `Enumerate` class consists of a few steps.\n",
     "1. Run exact.py to write the equations corresponding to the system of interest. To write the equations for the $n=5$ Ising model that we use an example in this notebook, you would run in the terminal (make sure you're in the same directory as exact.py),<br><br>\n",
-    "`python exact.py 5 1`  <br><br>\n",
+    "`python enumerate.py 5 1`  <br><br>\n",
     "The first argument to exact.py is the system size and the 1 indicates that the equations should be written for the symmetric Ising model $\\sigma_{\\rm i}\\in\\{-1,1\\}$. For $\\sigma_{\\rm i}\\in \\{0,1\\}$, we would put a 0 instead. The naming convention is \"ising\\_eqn\\_[n][s].py\" where n is the system size and \"_sym\" is the suffix if the spins are symmetric.\n",
     "2. Use the Exact class to solve the equations written in the resulting file.\n",
     "3. Define the function for calculating the observables (usually the mean of each spin and pairwise correlations) using the parameters (Langrangian multipliers). This will be passed into `calc_observables_multipliers`.\n",
     "\n",
-    "As a test of the Exact class below, we show that fitting to the known values of $\\langle\\sigma_{\\rm i}\\rangle$ and $\\langle\\sigma_{\\rm i}\\sigma_{\\rm j}\\rangle$ recovers the exact values of the parameters.<br><br>\n",
+    "As a test of the `Enumerate` class below, we show that fitting to the known values of $\\langle\\sigma_{\\rm i}\\rangle$ and $\\langle\\sigma_{\\rm i}\\sigma_{\\rm j}\\rangle$ recovers the exact values of the parameters.<br><br>\n",
     "## Notes:\n",
     "- It is much more efficient computationally to solve the asymmetric binary system $\\sigma_{\\rm i}\\in \\{0,1\\}$. We suggest transforming your problem into the \\{0,1\\} basis."
    ]
