fixed integration with solvers

--- a/ipynb/usage_guide.ipynb
+++ b/ipynb/usage_guide.ipynb
@@ -415,16 +415,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/eddie/anaconda/envs/python36/lib/python3.6/site-packages/coniii/solvers.py:670: UserWarning: Number of burn in MCMC iterations between samples may be too small for convergence to stationary distribution.\n",
+      "/Users/eddie/anaconda/envs/python36/lib/python3.6/site-packages/coniii/solvers.py:674: UserWarning: Number of burn in MCMC iterations between samples may be too small for convergence to stationary distribution.\n",
       "  \"convergence to stationary distribution.\")\n",
-      "/Users/eddie/anaconda/envs/python36/lib/python3.6/site-packages/coniii/solvers.py:673: UserWarning: Number of MCMC iterations between samples may be too small for convergence to stationary distribution.\n",
+      "/Users/eddie/anaconda/envs/python36/lib/python3.6/site-packages/coniii/solvers.py:677: UserWarning: Number of MCMC iterations between samples may be too small for convergence to stationary distribution.\n",
       "  \"stationary distribution.\")\n"
      ]
     },
@@ -432,8 +441,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error on multipliers: 8.226204E-01\n",
-      "Error on sample corr: 8.226007E-02\n"
+      "12.176137685775757\n",
+      "Error on multipliers: 8.017877E-01\n",
+      "Error on sample corr: 8.578300E-02\n"
      ]
     }
    ],
@@ -466,9 +476,11 @@
     "    return {'maxdlamda':exp(-i/5.),'eta':exp(-i/5.)}\n",
     "\n",
     "# Run solver.\n",
+    "t0=time.time()\n",
     "estMultipliers = solver.solve(constraints=sisj,\n",
     "                              maxiter=40,\n",
     "                              custom_convergence_f=learn_settings)\n",
+    "print(time.time()-t0)\n",
     "\n",
     "print(\"Error on multipliers: %E\"%error_on_multipliers(estMultipliers))\n",
     "print( \"Error on sample corr: %E\"%error_on_correlations(\n",
@@ -477,7 +489,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "super(type, obj): obj must be an instance or subtype of type",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-56a360257a78>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m              \u001b[0msample_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m              \u001b[0msample_method\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'ising_metropolis'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m              mch_approximation=mchApproximation)\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;31m# Solver instance that does not use multiprocess module.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;31m# solver = MCH(n,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda/envs/python36/lib/python3.6/site-packages/coniii/solvers.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    605\u001b[0m         \"\"\"\n\u001b[1;32m    606\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 607\u001b[0;31m         \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mMCH\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    608\u001b[0m         \u001b[0;32massert\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msampleSize\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Must specify sample_size.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    609\u001b[0m         \u001b[0;32massert\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msampleMethod\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Must specify sample_method.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: super(type, obj): obj must be an instance or subtype of type"
+     ]
+    }
+   ],
+   "source": [
+    "# Sampling parameters must be set here (in case you want to immediately sample using \n",
+    "# the given set of parameters)\n",
+    "solver = MCH(n,\n",
+    "             calc_observables=calc_observables,\n",
+    "             sample_size=100,\n",
+    "             sample_method='ising_metropolis',\n",
+    "             mch_approximation=mchApproximation)\n",
+    "# Solver instance that does not use multiprocess module.\n",
+    "# solver = MCH(n,\n",
+    "#              calc_observables=calc_observables,\n",
+    "#              sample_size=100,\n",
+    "#              sample_method='metropolis',\n",
+    "#              mch_approximation=mchApproximation,\n",
+    "#              n_jobs=0)\n",
+    "\n",
+    "# Define function for changing learning parameters as we converge.\n",
+    "def learn_settings(i):\n",
+    "    \"\"\"\n",
+    "    Take in the iteration counter and set the maximum change allowed in any given \n",
+    "    parameter (maxdlamda) and the multiplicative factor eta, where \n",
+    "    d(parameter) = (error in observable) * eta.\n",
+    "    \n",
+    "    Additional option is to also return the sample size for that step by returning a \n",
+    "    tuple. Larger sample sizes are necessary for higher accuracy.\n",
+    "    \"\"\"\n",
+    "    return {'maxdlamda':exp(-i/5.),'eta':exp(-i/5.)}\n",
+    "\n",
+    "# Run solver.\n",
+    "t0=time.time()\n",
+    "estMultipliers = solver.solve(constraints=sisj,\n",
+    "                              maxiter=40,\n",
+    "                              custom_convergence_f=learn_settings)\n",
+    "print(time.time()-t0)\n",
+    "\n",
+    "print(\"Error on multipliers: %E\"%error_on_multipliers(estMultipliers))\n",
+    "print( \"Error on sample corr: %E\"%error_on_correlations(\n",
+    "                        ising_eqn_5_sym.calc_observables(estMultipliers)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
