--- a/ipynb/usage_guide.ipynb
+++ b/ipynb/usage_guide.ipynb
@@ -417,33 +417,29 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "import time"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/eddie/anaconda/envs/python36/lib/python3.6/site-packages/coniii/solvers.py:701: UserWarning: Number of burn in MCMC iterations between samples may be too small for convergence to stationary distribution.\n",
+      "/Users/eddie/anaconda/envs/python36/lib/python3.6/site-packages/coniii/solvers.py:703: UserWarning: Number of burn in MCMC iterations between samples may be too small for convergence to stationary distribution.\n",
       "  \"convergence to stationary distribution.\")\n",
-      "/Users/eddie/anaconda/envs/python36/lib/python3.6/site-packages/coniii/solvers.py:704: UserWarning: Number of MCMC iterations between samples may be too small for convergence to stationary distribution.\n",
+      "/Users/eddie/anaconda/envs/python36/lib/python3.6/site-packages/coniii/solvers.py:706: UserWarning: Number of MCMC iterations between samples may be too small for convergence to stationary distribution.\n",
       "  \"stationary distribution.\")\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "80.81356596946716\n",
-      "Error on multipliers: 8.567937E-01\n",
-      "Error on sample corr: 9.524080E-02\n"
+     "ename": "AttributeError",
+     "evalue": "'FastMCIsing' object has no attribute 'samples'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-4abd4208c1a9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     30\u001b[0m estMultipliers = solver.solve(constraints=sisj,\n\u001b[1;32m     31\u001b[0m                               \u001b[0mmaxiter\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m40\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 32\u001b[0;31m                               custom_convergence_f=learn_settings)\n\u001b[0m\u001b[1;32m     33\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Error on multipliers: %E\"\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0merror_on_multipliers\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mestMultipliers\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda/envs/python36/lib/python3.6/site-packages/coniii/solvers.py\u001b[0m in \u001b[0;36msolve\u001b[0;34m(self, initial_guess, constraints, X, tol, tolNorm, n_iters, burnin, maxiter, custom_convergence_f, disp, full_output, learn_params_kwargs, generate_kwargs)\u001b[0m\n\u001b[1;32m    741\u001b[0m                                \u001b[0mgenerate_kwargs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mgenerate_kwargs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    742\u001b[0m                                initial_sample=np.random.choice([-1.,1.],\n\u001b[0;32m--> 743\u001b[0;31m                                                                size=(self.sampleSize,self.n)) )\n\u001b[0m\u001b[1;32m    744\u001b[0m         \u001b[0mthisConstraints\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcalc_observables\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msamples\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    745\u001b[0m         \u001b[0merrors\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mthisConstraints\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconstraints\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda/envs/python36/lib/python3.6/site-packages/coniii/solvers.py\u001b[0m in \u001b[0;36mgenerate_samples\u001b[0;34m(self, n_iters, burnin, multipliers, sample_size, sample_method, initial_sample, generate_kwargs)\u001b[0m\n\u001b[1;32m    255\u001b[0m                                                         \u001b[0mn_iters\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mburnin\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    256\u001b[0m                                                         \u001b[0mcpucount\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mn_jobs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 257\u001b[0;31m                                                         initial_sample=initial_sample )\n\u001b[0m\u001b[1;32m    258\u001b[0m                 self.sampler.generate_samples_parallel( sample_size,\n\u001b[1;32m    259\u001b[0m                                                         \u001b[0mn_iters\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mn_iters\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda/envs/python36/lib/python3.6/site-packages/coniii/samplers.py\u001b[0m in \u001b[0;36m_jit_generate_samples_parallel\u001b[0;34m(self, sample_size, n_iters, cpucount, initial_sample, systematic_iter)\u001b[0m\n\u001b[1;32m   1412\u001b[0m         \u001b[0mcpucount\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcpucount\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnCpus\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1413\u001b[0m         \u001b[0msample_metropolis\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_jit_sample_metropolis\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1414\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mE\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcalc_e\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtheta\u001b[0m \u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0ms\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msamples\u001b[0m \u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1415\u001b[0m         \u001b[0mh\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mJ\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mh\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mJ\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1416\u001b[0m         \u001b[0mn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'FastMCIsing' object has no attribute 'samples'"
      ]
     }
    ],
@@ -480,7 +476,6 @@
     "estMultipliers = solver.solve(constraints=sisj,\n",
     "                              maxiter=40,\n",
     "                              custom_convergence_f=learn_settings)\n",
-    "print(time.time()-t0)\n",
     "\n",
     "print(\"Error on multipliers: %E\"%error_on_multipliers(estMultipliers))\n",
     "print( \"Error on sample corr: %E\"%error_on_correlations(\n",
